--- a/mongodb-atlas/.env.example
+++ b/mongodb-atlas/.env.example
@@ -1,7 +1,7 @@
 GROUP_ID=<Atlas Project ID>
 CLUSTER_NAME=<Atlas Cluster Name>
 DB_NAME=docs-chatbot-dev
-CONVERSATIONS_TTL_SECONDS=31536000
+CONVERSATIONS_TTL_SECONDS=31536000 # 1 year
 CONVERSATIONS_COLL_NAME=conversations
 CONTENT_METADATA_COLL_NAME=pages
 EMBEDDED_CONTENT_COLL_NAME=embedded_content
