--- a/.drone.yml
+++ b/.drone.yml
@@ -18,11 +18,10 @@ steps:
   - name: test
     image: node:18
     commands:
-      # - npm ci
-      # - npm run build
-      # - npm run lint
-      # - npm run test
-      - echo "Skipping tests!"
+      - npm ci
+      - npm run build
+      - npm run lint
+      - npm run test
 
     environment:
       PORT: 3000
@@ -62,7 +61,6 @@ name: staging-build-chat-server
 trigger:
   branch:
     - main
-    - DOCSP-32807
   event:
     - push
 
@@ -128,7 +126,6 @@ trigger:
       - chat-ui/**/*
   branch:
     - main
-    - DOCSP-32807
 
 steps:
   # Deploys docker image associated with staging build that triggered promotion
