--- a/ingest/package.json
+++ b/ingest/package.json
@@ -51,6 +51,7 @@
     "@apidevtools/swagger-parser": "^10.1.0",
     "chat-core": "file:../chat-core",
     "deep-equal": "^2.2.1",
+    "docdoctor": "^0.1.0",
     "dotenv": "^16",
     "exponential-backoff": "^3.1.1",
     "front-matter": "^4.0.2",
