add k8s prod readiness config

--- a/ingest/environments/staging.yml
+++ b/ingest/environments/staging.yml
@@ -28,3 +28,8 @@ cronJobs:
       limits:
         cpu: 500m
         memory: 5Gi
+
+# Alerts
+defaultAlerts:
+  enabled: true
+  email: "chatbot@mongodb.com"
