revert drone file to orig state

--- a/.drone.yml
+++ b/.drone.yml
@@ -18,11 +18,10 @@ steps:
   - name: test
     image: node:18
     commands:
-      # - npm ci
-      # - npm run build
-      # - npm run lint
-      # - npm run test
-      - echo "skipping tests"
+      - npm ci
+      - npm run build
+      - npm run lint
+      - npm run test
 
     environment:
       PORT: 3000
@@ -62,7 +61,6 @@ name: staging-build-chat-server
 trigger:
   branch:
     - main
-    - DOCSP-32808
   event:
     - push
 
@@ -128,7 +126,6 @@ trigger:
       - chat-ui/**/*
   branch:
     - main
-    - DOCSP-32808
 
 steps:
   # Deploys docker image associated with staging build that triggered promotion
@@ -320,7 +317,6 @@ name: staging-build-ingest-service
 trigger:
   branch:
     - main
-    - DOCSP-32808
   event:
     - push
   paths:
@@ -382,7 +378,6 @@ trigger:
       - chat-core/**/*
   branch:
     - main
-    - DOCSP-32808
 
 steps:
   # Deploys docker image associated with staging build that triggered promotion
