--- a/ingest/.env.example
+++ b/ingest/.env.example
@@ -12,3 +12,6 @@ VECTOR_SEARCH_INDEX_NAME=<index_name>
 NODE_ENV=development
 # Connection string for DevCenter
 DEVCENTER_CONNECTION_URI="mongodb+srv://<username>:<password>@devhub-cluster.sewho.mongodb.net/?retryWrites=true&w=majority"
+
+# For use with GitHubDataSource. The token only needs read access to the repo.
+GITHUB_ACCESS_TOKEN=ghp_TOKENTOKENTOKEN
