--- a/ingest/environments/production.yml
+++ b/ingest/environments/production.yml
@@ -19,6 +19,7 @@ cronJobs:
       OPENAI_EMBEDDING_DEPLOYMENT: docs-chatbot-prod
       OPENAI_CHAT_COMPLETION_DEPLOYMENT: docs-chatbot-prod
       DEVCENTER_CONNECTION_URI: docs-chatbot-prod
+      GITHUB_ACCESS_TOKEN: docs-chatbot-prod
     resources:
       # guaranteed amount of resources
       requests:
