--- a/ingest/environments/staging.yml
+++ b/ingest/environments/staging.yml
@@ -19,6 +19,7 @@ cronJobs:
       OPENAI_EMBEDDING_DEPLOYMENT: docs-chatbot-staging
       OPENAI_CHAT_COMPLETION_DEPLOYMENT: docs-chatbot-staging
       DEVCENTER_CONNECTION_URI: docs-chatbot-staging
+      GITHUB_ACCESS_TOKEN: docs-chatbot-staging
     resources:
       # guaranteed amount of resources
       requests:
