--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "chat-ui",
     "ingest",
     "seed-content",
-    "scripts"
+    "scripts",
+    "performance-tests"
   ],
   "scripts": {
     "bootstrap": "lerna bootstrap",
