--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -50,6 +50,7 @@
     "@types/connect-timeout": "^0.0.37",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/express-slow-down": "^1.3.2",
     "@types/jest": "^29.5.2",
     "@types/stream-json": "^1.7.3",
     "@types/supertest": "^2.0.12",
@@ -59,6 +60,7 @@
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jest": "^27.2.1",
+    "express-slow-down": "^1.6.0",
     "jest": "^29.6.1",
     "mongodb-memory-server": "^8.12.2",
     "node-mocks-http": "^1.12.2",
