--- a/ingest/package.json
+++ b/ingest/package.json
@@ -56,6 +56,7 @@
     "exponential-backoff": "^3.1.1",
     "front-matter": "^4.0.2",
     "gpt3-tokenizer": "^1.1.5",
+    "html-entities": "^2.4.0",
     "html-to-text": "^9.0.5",
     "langchain": "^0.0.128",
     "mongodb": "^5",
