--- a/ingest/package.json
+++ b/ingest/package.json
@@ -26,6 +26,7 @@
     "@babel/preset-typescript": "^7",
     "@babel/types": "^7.22.5",
     "@types/deep-equal": "^1.0.1",
+    "@types/encodeurl": "^1.0.0",
     "@types/html-to-text": "^9.0.1",
     "@types/jest": "^29.5.2",
     "@types/node": "^12",
@@ -53,10 +54,10 @@
     "deep-equal": "^2.2.1",
     "docdoctor": "^0.1.0",
     "dotenv": "^16",
+    "encodeurl": "^1.0.2",
     "exponential-backoff": "^3.1.1",
     "front-matter": "^4.0.2",
     "gpt3-tokenizer": "^1.1.5",
-    "html-entities": "^2.4.0",
     "html-to-text": "^9.0.5",
     "langchain": "^0.0.128",
     "mongodb": "^5",
