--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -56,11 +56,12 @@
   "bundleDependencies": [
     "chat-core",
     "@lg-chat/avatar",
+    "@lg-chat/chat-window",
     "@lg-chat/input-bar",
+    "@lg-chat/leafygreen-chat-provider",
     "@lg-chat/message",
     "@lg-chat/message-feed",
-    "@lg-chat/message-rating",
-    "@lg-chat/title-bar"
+    "@lg-chat/message-rating"
   ],
   "dependencies": {
     "@emotion/css": "^11.11.2",
@@ -81,12 +82,13 @@
     "@leafygreen-ui/text-input": "^12.1.18",
     "@leafygreen-ui/toggle": "^10.0.15",
     "@leafygreen-ui/typography": "^16.5.4",
-    "@lg-chat/avatar": "^1.0.0",
-    "@lg-chat/input-bar": "^1.0.0",
-    "@lg-chat/message": "^1.0.0",
-    "@lg-chat/message-feed": "^1.0.0",
-    "@lg-chat/message-rating": "^1.0.0",
-    "@lg-chat/title-bar": "^1.0.0",
+    "@lg-chat/avatar": "^2.0.3",
+    "@lg-chat/chat-window": "^1.0.4",
+    "@lg-chat/input-bar": "^3.0.1",
+    "@lg-chat/leafygreen-chat-provider": "^1.0.2",
+    "@lg-chat/message": "^2.0.4",
+    "@lg-chat/message-feed": "^2.0.4",
+    "@lg-chat/message-rating": "^1.1.3",
     "@microsoft/fetch-event-source": "^2.0.1",
     "buffer": "^6.0.3",
     "chat-core": "file:../chat-core",
