--- a/ingest/package.json
+++ b/ingest/package.json
@@ -59,6 +59,7 @@
     "front-matter": "^4.0.2",
     "gpt3-tokenizer": "^1.1.5",
     "html-to-text": "^9.0.5",
+    "ignore": "^5.2.4",
     "langchain": "^0.0.128",
     "mongodb": "^5",
     "node-fetch": "^2",
