--- a/chat-core/package.json
+++ b/chat-core/package.json
@@ -45,8 +45,10 @@
     "dotenv": "^16.3.1",
     "exponential-backoff": "^3.1.1",
     "front-matter": "^4.0.2",
+    "gray-matter": "^4.0.3",
     "mongodb": "^5.6.0",
     "openai": "^3",
+    "toml": "^3.0.0",
     "winston": "^3",
     "yaml": "^2.3.1",
     "zod": "^3.21.4"
