--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "clean": "lerna clean",
     "build": "lerna run build",
     "test": "lerna run test",
-    "lint": "lerna run lint"
+    "lint": "lerna run lint",
+    "release:chat-ui": "lerna run release --scope mongodb-chatbot-ui"
   },
   "devDependencies": {
     "lerna": "^5.6.2"
