Update chat-ui release config

--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -28,11 +28,16 @@
     "git": {
       "commit": true,
       "commitMessage": "Release chat-ui-v${version}",
-      "tagName": "chat-ui-v${version}"
+      "tagName": "chat-ui-v${version}",
+      "push": false
     },
     "github": {
       "releaseName": "chat-ui-v${version}",
-      "draft": true
+      "draft": true,
+      "autoGenerate": true
+    },
+    "npm": {
+      "publish": false
     }
   },
   "scripts": {
@@ -53,7 +58,8 @@
     "preview:static-site:qa": "npm run build:static-site:qa && vite preview --base ./ --config vite.config.static-site.js",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "release": "release-it"
+    "release:interactive": "release-it",
+    "release": "release-it --ci"
   },
   "bundleDependencies": [
     "chat-core",
