--- a/ingest/package.json
+++ b/ingest/package.json
@@ -30,6 +30,7 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^12",
     "@types/node-fetch": "^2.6.4",
+    "@types/turndown": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
     "eslint": "^8",
@@ -56,10 +57,11 @@
     "exponential-backoff": "^3.1.1",
     "front-matter": "^4.0.2",
     "gpt3-tokenizer": "^1.1.5",
-    "html-to-text": "^9.0.5",
+    "jsdom": "^22.1.0",
     "langchain": "^0.0.128",
     "mongodb": "^5",
     "node-fetch": "^2",
+    "turndown": "^7.1.2",
     "yaml": "^2.3.1",
     "yargs": "^17"
   }
