--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -9,7 +9,7 @@
     "node": ">=18",
     "npm": ">=8"
   },
-  "main": "index.js",
+  "main": "src/lib.ts",
   "scripts": {
     "build": "rm -rf ./dist/ && tsc",
     "postbuild": "cp ./src/processors/MongoDbUserQueryPreprocessorResponse.d.ts ./dist/processors/",
@@ -33,6 +33,7 @@
     "gpt3-tokenizer": "^1.1.5",
     "ip-address": "^8.1.0",
     "langchain": "^0.0.95",
+    "lodash.clonedeep": "^4.5.0",
     "mongodb": "^5.7.0",
     "openai": "^3.2.1",
     "pm2": "^5.3.0",
@@ -52,6 +53,7 @@
     "@types/express": "^4.17.17",
     "@types/express-slow-down": "^1.3.2",
     "@types/jest": "^29.5.2",
+    "@types/lodash.clonedeep": "^4.5.7",
     "@types/stream-json": "^1.7.3",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
