--- a/ingest/package.json
+++ b/ingest/package.json
@@ -58,10 +58,13 @@
     "exponential-backoff": "^3.1.1",
     "front-matter": "^4.0.2",
     "gpt3-tokenizer": "^1.1.5",
+    "ignore": "^5.2.4",
     "jsdom": "^22.1.0",
-    "langchain": "^0.0.128",
+    "langchain": "^0.0.148",
     "mongodb": "^5",
     "node-fetch": "^2",
+    "rimraf": "^5.0.1",
+    "simple-git": "^3.19.1",
     "turndown": "^7.1.2",
     "turndown-plugin-gfm": "^1.0.2",
     "yaml": "^2.3.1",
