--- a/chat-server/.env.example
+++ b/chat-server/.env.example
@@ -10,3 +10,4 @@ MONGODB_CONNECTION_URI=<connection_uri>
 MONGODB_DATABASE_NAME=<docs-chatbot-ENV>
 VECTOR_SEARCH_INDEX_NAME=<index_name>
 NODE_ENV=development
+ALLOWED_ORIGINS=http://example.com,http://localhost:5173
