--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -91,11 +91,14 @@
     "@leafygreen-ui/toggle": "^10.0.15",
     "@leafygreen-ui/typography": "^16.5.4",
     "@lg-chat/avatar": "^2.0.3",
+    "@lg-chat/chat-disclaimer": "^1.0.1",
     "@lg-chat/chat-window": "^1.0.4",
+    "@lg-chat/fixed-chat-window": "^1.1.1",
     "@lg-chat/input-bar": "^3.0.1",
     "@lg-chat/leafygreen-chat-provider": "^1.0.2",
     "@lg-chat/message": "^2.0.4",
     "@lg-chat/message-feed": "^2.0.4",
+    "@lg-chat/message-prompts": "^1.0.1",
     "@lg-chat/message-rating": "^1.1.3",
     "@microsoft/fetch-event-source": "^2.0.1",
     "buffer": "^6.0.3",
