--- a/ingest/package.json
+++ b/ingest/package.json
@@ -50,6 +50,8 @@
   },
   "dependencies": {
     "@apidevtools/swagger-parser": "^10.1.0",
+    "acquit": "^1.3.0",
+    "acquit-require": "^0.1.1",
     "chat-core": "file:../chat-core",
     "deep-equal": "^2.2.1",
     "docdoctor": "^0.1.0",
@@ -59,7 +61,8 @@
     "front-matter": "^4.0.2",
     "gpt3-tokenizer": "^1.1.5",
     "html-to-text": "^9.0.5",
-    "langchain": "^0.0.128",
+    "ignore": "^5.2.4",
+    "langchain": "^0.0.146",
     "mongodb": "^5",
     "node-fetch": "^2",
     "yaml": "^2.3.1",
