(DOCSP-32991, DOCSP-32992): `GitDataSource`, functionality for converting HTML to Markdown, ingest Scala, Java Reactive Streams, and C docs (#152)
* start stubbing out data source

* draft GH HTML to MD

* working handler w git data source

* add scala/java reactive streams data sources

* Add C driver

* ingest C docs

* fix page path func

* add TODOs from other PR

* strip HTML links + imgs

* inc test timeout

* rimraf in finally block

* add git to dockerfile

--- a/ingest/package.json
+++ b/ingest/package.json
@@ -29,8 +29,10 @@
     "@types/encodeurl": "^1.0.0",
     "@types/html-to-text": "^9.0.1",
     "@types/jest": "^29.5.2",
+    "@types/jsdom": "^21.1.2",
     "@types/node": "^12",
     "@types/node-fetch": "^2.6.4",
+    "@types/turndown": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
     "eslint": "^8",
@@ -62,9 +64,14 @@
     "gpt3-tokenizer": "^1.1.5",
     "html-to-text": "^9.0.5",
     "ignore": "^5.2.4",
-    "langchain": "^0.0.146",
+    "jsdom": "^22.1.0",
+    "langchain": "^0.0.148",
     "mongodb": "^5",
     "node-fetch": "^2",
+    "rimraf": "^5.0.1",
+    "simple-git": "^3.19.1",
+    "turndown": "^7.1.2",
+    "turndown-plugin-gfm": "^1.0.2",
     "yaml": "^2.3.1",
     "yargs": "^17"
   }
