--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mongodb-chatbot-ui",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "UI for the MongoDB AI Chatbot",
   "author": "MongoDB, Inc.",
   "license": "Apache-2.0",
@@ -26,11 +26,18 @@
   },
   "release-it": {
     "git": {
-      "commitMessage": "Release chat-ui-v${version}"
+      "commit": true,
+      "commitMessage": "Release chat-ui-v${version}",
+      "tagName": "chat-ui-v${version}",
+      "push": false
     },
     "github": {
       "releaseName": "chat-ui-v${version}",
-      "draft": true
+      "draft": true,
+      "autoGenerate": true
+    },
+    "npm": {
+      "publish": false
     }
   },
   "scripts": {
@@ -51,16 +58,18 @@
     "preview:static-site:qa": "npm run build:static-site:qa && vite preview --base ./ --config vite.config.static-site.js",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "release": "release-it"
+    "release:interactive": "release-it",
+    "release": "release-it --ci"
   },
   "bundleDependencies": [
     "chat-core",
     "@lg-chat/avatar",
+    "@lg-chat/chat-window",
     "@lg-chat/input-bar",
+    "@lg-chat/leafygreen-chat-provider",
     "@lg-chat/message",
     "@lg-chat/message-feed",
-    "@lg-chat/message-rating",
-    "@lg-chat/title-bar"
+    "@lg-chat/message-rating"
   ],
   "dependencies": {
     "@emotion/css": "^11.11.2",
@@ -81,12 +90,16 @@
     "@leafygreen-ui/text-input": "^12.1.18",
     "@leafygreen-ui/toggle": "^10.0.15",
     "@leafygreen-ui/typography": "^16.5.4",
-    "@lg-chat/avatar": "^1.0.0",
-    "@lg-chat/input-bar": "^1.0.0",
-    "@lg-chat/message": "^1.0.0",
-    "@lg-chat/message-feed": "^1.0.0",
-    "@lg-chat/message-rating": "^1.0.0",
-    "@lg-chat/title-bar": "^1.0.0",
+    "@lg-chat/avatar": "^2.0.3",
+    "@lg-chat/chat-disclaimer": "^1.0.1",
+    "@lg-chat/chat-window": "^1.0.4",
+    "@lg-chat/fixed-chat-window": "^1.1.1",
+    "@lg-chat/input-bar": "^3.0.1",
+    "@lg-chat/leafygreen-chat-provider": "^1.0.2",
+    "@lg-chat/message": "^2.0.4",
+    "@lg-chat/message-feed": "^2.0.4",
+    "@lg-chat/message-prompts": "^1.0.1",
+    "@lg-chat/message-rating": "^1.1.3",
     "@microsoft/fetch-event-source": "^2.0.1",
     "buffer": "^6.0.3",
     "chat-core": "file:../chat-core",
