--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "chat-ui",
     "ingest",
     "seed-content",
-    "scripts"
+    "scripts",
+    "performance-tests"
   ],
   "scripts": {
     "bootstrap": "lerna bootstrap",
@@ -15,7 +16,8 @@
     "clean": "lerna clean",
     "build": "lerna run build",
     "test": "lerna run test",
-    "lint": "lerna run lint"
+    "lint": "lerna run lint",
+    "release:chat-ui": "lerna run release --scope mongodb-chatbot-ui && git add ./package-lock.json && git commit --amend --no-edit"
   },
   "devDependencies": {
     "lerna": "^5.6.2"
