--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chat-server",
-  "version": "0.0.10-1",
+  "version": "0.1.0",
   "description": "Q&A server for the MongoDB Docs AI chatbot.",
   "author": "MongoDB, Inc.",
   "license": "ISC",
