[DOCSP-32954] Connect to backend to add messages (#169)
* [Snyk] Upgrade urllib from 3.17.2 to 3.18.0 (#147)

* fix: upgrade urllib from 3.17.2 to 3.18.0

Snyk has created this PR to upgrade urllib from 3.17.2 to 3.18.0.

See this package in npm:
https://www.npmjs.com/package/urllib

See this project in Snyk:
https://app.snyk.io/org/eng-documentationcloud-docs/project/2b705138-3e0b-4171-85b9-1c6093803e80?utm_source=github&utm_medium=referral&page=upgrade-pr

* fix: upgrade urllib from 3.17.2 to 3.18.0

Snyk has created this PR to upgrade urllib from 3.17.2 to 3.18.0.

See this package in npm:
https://www.npmjs.com/package/urllib

See this project in Snyk:
https://app.snyk.io/org/eng-documentationcloud-docs/project/2b705138-3e0b-4171-85b9-1c6093803e80?utm_source=github&utm_medium=referral&page=upgrade-pr

---------

Co-authored-by: snyk-bot <snyk-bot@snyk.io>

* (DOCSP-32670): Basic server load testing (#136)

* draft basic load test w localhost..code working

* add env base URL + second msg

* ES5 for goja runtime

* increase load + remove sleep

* clean up

* add bypass WAF headers

* reduce # users

* update staging test instructions

* Apply suggestions from code review

* (DOCSP-32757) [UI] Update to Responsive LG Chat Components (#145)

* Add root release:chat-ui command

* Release chat-ui-v0.0.5

* Update chat-ui release config

* add default + remove unused style

* (DOCSP-32616): Refactor config, add library, and log config (#143)

* fix merge weirdness

* latest updates checkpoint

* app config refactor

* add logger

* remove index imports

* export lib modules

* change lib entry point

* separate config module from running server for no port collision/separation of concern

* update TS entry point

* fix broken test

* Update chat-server/src/app.ts

* Update chat-server/src/app.ts

* make preprocessor less biased toward shell (#149)

* make preprocessor less biased toward

--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chat-server",
-  "version": "1.0.2",
+  "version": "0.0.10-1",
   "description": "Q&A server for the MongoDB Docs AI chatbot.",
   "author": "MongoDB, Inc.",
   "license": "ISC",
@@ -32,7 +32,7 @@
     "express-rate-limit": "^6.10.0",
     "gpt3-tokenizer": "^1.1.5",
     "ip-address": "^8.1.0",
-    "langchain": "^0.0.95",
+    "langchain": "^0.0.148",
     "lodash.clonedeep": "^4.5.0",
     "mongodb": "^5.7.0",
     "openai": "^3.2.1",
