--- a/ingest/package.json
+++ b/ingest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ingest",
-  "version": "0.0.6-0",
+  "version": "0.0.6-1",
   "description": "Ingests data sources and stores embeddings.",
   "author": "",
   "license": "ISC",
@@ -29,8 +29,10 @@
     "@types/encodeurl": "^1.0.0",
     "@types/html-to-text": "^9.0.1",
     "@types/jest": "^29.5.2",
+    "@types/jsdom": "^21.1.2",
     "@types/node": "^12",
     "@types/node-fetch": "^2.6.4",
+    "@types/turndown": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
     "eslint": "^8",
@@ -50,6 +52,8 @@
   },
   "dependencies": {
     "@apidevtools/swagger-parser": "^10.1.0",
+    "acquit": "^1.3.0",
+    "acquit-require": "^0.1.1",
     "chat-core": "file:../chat-core",
     "deep-equal": "^2.2.1",
     "docdoctor": "^0.1.0",
@@ -59,9 +63,15 @@
     "front-matter": "^4.0.2",
     "gpt3-tokenizer": "^1.1.5",
     "html-to-text": "^9.0.5",
-    "langchain": "^0.0.128",
+    "ignore": "^5.2.4",
+    "jsdom": "^22.1.0",
+    "langchain": "^0.0.148",
     "mongodb": "^5",
     "node-fetch": "^2",
+    "rimraf": "^5.0.1",
+    "simple-git": "^3.19.1",
+    "turndown": "^7.1.2",
+    "turndown-plugin-gfm": "^1.0.2",
     "yaml": "^2.3.1",
     "yargs": "^17"
   }
