--- a/chat-ui/.release-it.json
+++ b/chat-ui/.release-it.json
@@ -13,6 +13,6 @@
     "release": true
   },
   "hooks": {
-    "before:init": ["git pull", "npm run build", "npm run lint"]
+    "before:init": ["git pull", "npm run build", "npm run lint", "npm run test"]
   }
 }
