--- a/scripts/.env.example
+++ b/scripts/.env.example
@@ -1,2 +1,2 @@
-MONGODB_QA_CONNECTION_URI=<MongoDB cluster with conversations>
-MONGODB_QA_DATABASE_NAME=docs-chatbot-qa
+MONGODB_CONNECTION_URI=<MongoDB cluster with conversations>
+MONGODB_DATABASE_NAME=docs-chatbot-qa
