--- a/ingest/package.json
+++ b/ingest/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Ingests data sources and stores embeddings.",
   "author": "",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "keywords": [],
   "engines": {
     "node": ">=18",
