--- a/mongodb-atlas/package.json
+++ b/mongodb-atlas/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mongodb-atlas",
   "version": "1.0.0",
+  "license": "Apache-2.0",
   "description": "",
   "scripts": {
     "add-search-index:dev": "ts-node add-search-index.ts .env.dev",
@@ -17,7 +18,6 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
   "devDependencies": {
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
