--- a/.drone.yml
+++ b/.drone.yml
@@ -504,3 +504,154 @@ steps:
         from_secret: mongodb_chatbot_ui_npm_email
       password:
         from_secret: mongodb_chatbot_ui_npm_token
+# ---
+# Scrubbing service
+# ---
+---
+depends_on: ["test-all"]
+kind: pipeline
+type: kubernetes
+name: staging-build-scrubbing-service
+
+trigger:
+  branch:
+    - main
+  event:
+    - push
+  paths:
+    include:
+      - scripts/**/*
+      - chat-core/**/*
+      - chat-server/**/*
+
+steps:
+  # Builds and publishes Docker image for staging
+  - name: publish-staging-scrubbing-service
+    image: plugins/kaniko-ecr
+    settings:
+      dockerfile: scrubbing-service.dockerfile
+      create_repository: true
+      registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
+      repo: docs/${DRONE_REPO_NAME}-scrubbing-service
+      tags:
+        - git-${DRONE_COMMIT_SHA:0:7}-staging
+        - latest-staging
+      access_key:
+        from_secret: ecr_access_key
+      secret_key:
+        from_secret: ecr_secret_key
+
+  # Promotes current drone build to staging environment
+  - name: promote-staging-scrubbing-service
+    image: drone/cli:1.4.0-alpine
+    commands:
+      - drone build promote mongodb/chatbot ${DRONE_BUILD_NUMBER} staging
+    environment:
+      DRONE_SERVER: ${DRONE_SYSTEM_PROTO}://${DRONE_SYSTEM_HOST}
+      DRONE_TOKEN:
+        from_secret: drone_token
+
+---
+kind: pipeline
+type: kubernetes
+name: staging-deploy-scrubbing-service
+
+trigger:
+  event:
+    - promote
+  target:
+    - staging
+  paths:
+    include:
+      - scripts/**/*
+      - chat-core/**/*
+      - chat-staging/**/*
+  branch:
+    - main
+
+steps:
+  # Deploys docker image associated with staging build that triggered promotion
+  - name: deploy-staging-scrubbing-service
+    image: quay.io/mongodb/drone-helm:v3
+    settings:
+      chart: mongodb/cronjobs
+      chart_version: 1.7.1
+      add_repos: [mongodb=https://10gen.github.io/helm-charts]
+      namespace: docs
+      release: scrubbing-service
+      values: image.tag=git-${DRONE_COMMIT_SHA:0:7}-staging,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/docs/${DRONE_REPO_NAME}-scrubbing-service
+      values_files:
+        - scripts/environments/staging.yml
+      api_server: https://api.staging.corp.mongodb.com
+      kubernetes_token:
+        from_secret: staging_kubernetes_token
+
+---
+depends_on: ["test-all"]
+kind: pipeline
+type: kubernetes
+name: production-build-scrubbing-service
+
+trigger:
+  event:
+    - tag
+  ref:
+    include:
+      - refs/tags/scripts-v*
+
+steps:
+  # Builds and publishes Docker image for production
+  - name: publish-production-scrubbing-service
+    image: plugins/kaniko-ecr
+    settings:
+      dockerfile: scrubbing-service.dockerfile
+      create_repository: true
+      registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
+      repo: docs/${DRONE_REPO_NAME}-scrubbing-service
+      tags:
+        - git-${DRONE_COMMIT_SHA:0:7}-production
+        - latest-production
+      access_key:
+        from_secret: ecr_access_key
+      secret_key:
+        from_secret: ecr_secret_key
+
+  # Promotes current drone build to production environment
+  - name: promote-production-scrubbing-service
+    image: drone/cli:1.4.0-alpine
+    commands:
+      - drone build promote mongodb/chatbot ${DRONE_BUILD_NUMBER} production
+    environment:
+      DRONE_SERVER: ${DRONE_SYSTEM_PROTO}://${DRONE_SYSTEM_HOST}
+      DRONE_TOKEN:
+        from_secret: drone_token
+
+---
+kind: pipeline
+type: kubernetes
+name: production-deploy-scrubbing-service
+
+trigger:
+  event:
+    - promote
+  target:
+    - production
+  ref:
+    include:
+      - refs/tags/ingest-v*
+
+steps:
+  - name: deploy-production-scrubbing-service
+    image: quay.io/mongodb/drone-helm:v3
+    settings:
+      chart: mongodb/cronjobs
+      chart_version: 1.7.1
+      add_repos: [mongodb=https://10gen.github.io/helm-charts]
+      namespace: docs
+      release: scrubbing-service
+      values: image.tag=git-${DRONE_COMMIT_SHA:0:7}-production,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/docs/${DRONE_REPO_NAME}-scrubbing-service
+      values_files:
+        - scripts/environments/production.yml
+      api_server: https://api.prod.corp.mongodb.com
+      kubernetes_token:
+        from_secret: prod_kubernetes_token
