--- a/ingest/.release-it.json
+++ b/ingest/.release-it.json
@@ -1,7 +1,9 @@
 {
   "git": {
+    "add": "../",
     "tag": false,
     "push": true,
+    "pushRepo": "upstream",
     "tagName": "ingest-v${version}"
   },
   "npm": {
@@ -13,6 +15,11 @@
     "release": true
   },
   "hooks": {
-    "before:init": ["git pull", "npm run build", "npm run lint", "npm run test"]
+    "before:init": [
+      "pushd ../chat-core && npm i && npm run build && popd",
+      "npm run build",
+      "npm run lint",
+      "npm run test"
+    ]
   }
 }
