--- a/scripts/environments/staging.yml
+++ b/scripts/environments/staging.yml
@@ -4,8 +4,25 @@ image:
 
 cronJobs:
   - name: scrub
-    schedule: "0 7 * * *" # every day at 7am UTC
+    schedule: "0 6 * * *" # every day at 6am UTC
     command: ["node", "./build/scrubMessages.js"]
+    env:
+      MONGODB_DATABASE_NAME: docs-chatbot-staging
+    envSecrets:
+      MONGODB_CONNECTION_URI: docs-chatbot-staging
+    resources:
+      # guaranteed amount of resources
+      requests:
+        cpu: 100m
+        memory: 2Gi
+      # maximum allowed resources
+      limits:
+        cpu: 500m
+        memory: 5Gi
+
+  - name: analyze
+    schedule: "0 7 * * *" # every day at 7am UTC
+    command: ["node", "./build/analyzeMessages.js"]
     env:
       MONGODB_DATABASE_NAME: docs-chatbot-staging
     envSecrets:
