Update release-it scripts to include monorepo package-lock

--- a/chat-server/.release-it.json
+++ b/chat-server/.release-it.json
@@ -1,6 +1,7 @@
 {
   "git": {
-    "add": "../",
+    "commitArgs": ["-a"],
+    "commitMessage": "Release chat-server v${version}",
     "tag": false,
     "push": true,
     "pushRepo": "upstream",
