--- a/chat-ui/.release-it.json
+++ b/chat-ui/.release-it.json
@@ -1,7 +1,10 @@
 {
   "git": {
+    "commitArgs": ["-a"],
+    "commitMessage": "Release chat-ui v${version}",
     "tag": false,
     "push": true,
+    "pushRepo": "upstream",
     "tagName": "chat-ui-v${version}"
   },
   "npm": {
@@ -13,6 +16,10 @@
     "release": true
   },
   "hooks": {
-    "before:init": ["git pull", "npm run build", "npm run lint"]
+    "before:init": [
+      "pushd ../chat-core && npm i && npm run build && popd",
+      "npm run build",
+      "npm run lint"
+    ]
   }
 }
