--- a/scripts/.release-it.json
+++ b/scripts/.release-it.json
@@ -1,6 +1,7 @@
 {
   "git": {
-    "add": "../",
+    "commitArgs": ["-a"],
+    "commitMessage": "Release scripts v${version}",
     "tag": false,
     "push": true,
     "pushRepo": "upstream",
