(DOCSP-31104) [UI] Add tests to FE services (#190)

--- a/chat-ui/.release-it.json
+++ b/chat-ui/.release-it.json
@@ -19,7 +19,8 @@
     "before:init": [
       "pushd ../chat-core && npm i && npm run build && popd",
       "npm run build",
-      "npm run lint"
+      "npm run lint",
+      "npm run test"
     ]
   }
 }
