--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -67,6 +67,7 @@
     "@lg-chat/avatar",
     "@lg-chat/chat-window",
     "@lg-chat/input-bar",
+    "@lg-chat/leafygreen-chat-provider",
     "@lg-chat/message",
     "@lg-chat/message-feed",
     "@lg-chat/message-rating"
@@ -91,10 +92,14 @@
     "@leafygreen-ui/toggle": "^10.0.15",
     "@leafygreen-ui/typography": "^16.5.4",
     "@lg-chat/avatar": "^2.0.6",
+    "@lg-chat/chat-disclaimer": "^2.0.0",
     "@lg-chat/chat-window": "^1.0.4",
+    "@lg-chat/fixed-chat-window": "^1.1.1",
     "@lg-chat/input-bar": "^3.1.3",
+    "@lg-chat/leafygreen-chat-provider": "^1.0.2",
     "@lg-chat/message": "^2.0.8",
     "@lg-chat/message-feed": "^2.0.7",
+    "@lg-chat/message-prompts": "^1.0.2",
     "@lg-chat/message-rating": "^1.1.3",
     "@microsoft/fetch-event-source": "^2.0.1",
     "buffer": "^6.0.3",
@@ -102,6 +107,7 @@
     "esbuild": "^0.17.19",
     "prettier": "^2.8.8",
     "react-markdown": "^8.0.7",
+    "react-transition-group": "^4.4.5",
     "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
