--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -50,10 +50,13 @@
     "chat-core",
     "@lg-chat/avatar",
     "@lg-chat/chat-window",
+    "@lg-chat/chat-disclaimer",
+    "@lg-chat/fixed-chat-window",
     "@lg-chat/input-bar",
     "@lg-chat/leafygreen-chat-provider",
     "@lg-chat/message",
     "@lg-chat/message-feed",
+    "@lg-chat/message-prompts",
     "@lg-chat/message-rating"
   ],
   "dependencies": {
