--- a/chat-ui/.release-it.json
+++ b/chat-ui/.release-it.json
@@ -14,7 +14,8 @@
     "releaseName": "chat-ui-v${version}",
     "draft": true,
     "autoGenerate": true,
-    "release": true
+    "release": true,
+    "tokenRef": "MONGODB_CHATBOT_GITHUB_TOKEN"
   },
   "hooks": {
     "before:init": [
